Trying to fix the horizontal scroll behavior

--- a/styles.scss
+++ b/styles.scss
@@ -752,6 +752,11 @@ body {
   }
 }
 @media screen and (max-width: 820px) {
+  html,
+  body {
+    max-width: 100% !important;
+    overflow-x: hidden !important;
+  }
   .sect-header {
     &__h2 {
       font-size: 1.4rem;
